<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OST Hotspot</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_hashkey_title">Hash Key</string>
    <string name="pref_hashkey_summary">Key to hash MAC Addresses in log file</string>
    <string name="pref_hashkey_default">9wLNYWbZ</string>
    <string name="pref_hostname_title">Hotspot Host name</string>
    <string name="pref_hostname_summary">In hotspot mode, human-readable device name</string>
    <string name="pref_hostname_default">Leaflets</string>
    <string name="pref_hotspot_title">Hotspot Mode</string>
    <string name="pref_hotspot_summary">Run as a WiFi hotspot/access point</string>
    <string name="pref_captiveportal_title">Captive Portal Mode</string>
    <string name="pref_captiveportal_summary">In hotspot mode, intercept all web accesses attempted by clients</string>
    <string name="pref_ssid_title">Hotspot Wifi network</string>
    <string name="pref_ssid_summary">In hotspot mode, Wifi network name</string>
    <string name="pref_ssid_default">Leaflets</string>
    <string name="pref_arppoll_title">Poll ARP table</string>
    <string name="pref_arppoll_summary">Check and log devices communicating with this device</string>
    <string name="pref_arppollinterval_title">ARP Poll Interval</string>
    <string name="pref_arppollinterval_summary">How often device should poll ARP table (seconds)</string>
    
</resources>
